--- a/lang/en.json
+++ b/lang/en.json
@@ -104,11 +104,19 @@
   "hard":              "Hard",
   "very_hard":         "Very Hard",
   "almost_impossible": "Almost Impossible",
-
+  "StatusConditions":  "Status Conditions",
   "MakingATotalOf": "Making a Total of",
   "MagicPoints": "Magic Points",
   "AddCustomDice": "Add Custom Dice",
   "Added": "added",
+  "AddStatus": "Add Status",
+  "RemoveStatus": "Remove Status",
+  "AddEnergy": "Add Energy",
+  "RemoveEnergy": "Remove Energy",
+  "AddMagic": "Add Magic",
+  "RemoveMagic": "Remove Magic",
+  "AddHealth": "Add Health",
+  "RemoveHealth": "Remove Health",
   "AddToPool": "Add To Pool",
   "DicePoolName": "Dice Pool Name",
   "EffectDice": "Effect Dice",
