renamed Fencer to Commander

--- a/lang/en.json
+++ b/lang/en.json
@@ -28,7 +28,7 @@
   "earthland.RoleDetective":   "Detective",
   "earthland.RoleEntertainer": "Entertainer",
   "earthland.RoleExplorer":    "Explorer",
-  "earthland.RoleFencer":      "Fencer",
+  "earthland.RoleFencer":      "Commander",
   "earthland.RoleHealer":      "Healer",
   "earthland.RoleLeader":      "Leader",
   "earthland.RoleLurker":      "Lurker",
@@ -41,7 +41,7 @@
   "earthland.PackageAssassin": "Assassin",
   "earthland.PackageBrawler":  "Brawler",
   "earthland.PackageDefender": "Defender",
-  "earthland.PackageFencer":   "Fencer",
+  "earthland.PackageFencer":   "Commander",
   "earthland.PackageHealer":   "Healer",
   "earthland.PackageMA":       "Martial Artist",
   "earthland.PackageSharp":    "Sharpshooter",
